# youtube-course-generator

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  README_TESTING.md  TESTING_VALIDATION_SECTION.md  app.py  autonomous_test_fixer.py  cloudinary_test.py  course_result.html  course_result_final.html  course_result_fixed.html  coverage.json  current_homepage.html  final_youtube_test.py  google_auth.py  gunicorn.conf.py  homepage_check.html  main.py  models.py  package-lock.json  package.json  push-to-github.js  pyproject.toml  pytest.ini  replit.md  run_tests.py  shorts_test.html  test_fast_system.html  test_mp4.html  test_runner.py  test_video_player.html  test_video_system.py  test_youtube_button.py  test_youtube_embed.js  test_youtube_implementation.py  test_youtube_validation.py
attached_assets/: Pasted--Course-Generated-Successfully-Course-Generator-Course-Result-Course-Generated-Successfully-B--1755023307244_1755023307244.txt  Pasted--test-session-starts-platform-linux--1750219530489_1750219530489.txt  Pasted-Actor-Youtube-Video-Downloader-Run-API-Share-Export-Abort-Running-Crawled-0-1-pages-1752806167080_1752806167080.txt  Pasted-Actor-Youtube-Video-Downloader-Run-API-Share-Export-Abort-Running-Crawled-0-1-pages-1752806188711_1752806188711.txt  Pasted-Course-Generator-Course-Generator-Generated-Courses-Test-Dashboard-API-Stats-New-Course-Cou-1757876827978_1757876827978.txt  Pasted-Course-Generator-Course-Generator-Generated-Courses-Test-Dashboard-API-Stats-New-Course-Cou-1759087746868_1759087746877.txt  (+3 more)
frontend/: index.html  tailwind.config.js  (+1 more)
(+60 files in other folders)
