[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "anthropic>=0.54.0",
    "apify-client>=1.12.0",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "cloudinary>=1.44.1",
    "email-validator>=2.2.0",
    "eventlet>=0.40.3",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.88.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "youtube-transcript-api>=1.1.0",
    "yt-dlp>=2025.6.9",
    "flask-socketio>=5.5.1",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
]
